--- a/cards-d100923er/package.json
+++ b/cards-d100923er/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "joi": "^17.12.3",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
