--- a/cards-d100923er/package.json
+++ b/cards-d100923er/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "fortawesome": "^0.0.1-security",
     "joi": "^17.12.3",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
